--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer></footer>
-    <div id="floatingNews">
+    <!--- <div id="floatingNews">
         <div id="news">
             <div id="tollbar">
                 <p>Titulo</p>
@@ -31,7 +31,7 @@
             </div>
             <div id="newsContent"></div>
         </div>
-    </div>
+    </div> --->
     <script src="script.js"></script>
 </body>
 </html>
