--- a/index.html
+++ b/index.html
@@ -12,12 +12,25 @@
         <p>Notícias</p>
     </header>
     <main>
-        <section id="filter"></section>
+        <section id="filter">
+            <select name="" id="">
+                <option value="">n/a</option>
+                <option value="">Janeiro</option>
+                <option value="">Fevereiro</option>
+                <option value="">Março</option>
+                <option value="">Abril</option>
+                <option value="">Maio</option>
+                <option value="">Junho</option>
+                <option value="">Julho</option>
+                <option value="">Agosto</option>
+                <option value="">Setembro</option>
+                <option value="">Outubro</option>
+                <option value="">Novembro</option>
+                <option value="">Dezembro</option>
+            </select>
+        </section>
         <section id="newsContainer">
-            <button class="newscard" onclick="shangeFloating()">
-                <p>Titulo</p>
-                <p>Lide</p>
-            </button>
+            <button></button>
         </section>
     </main>
     <footer></footer>
